# ffmpeg_overlay_demo

./: CMakeLists.txt  README.md  main.cpp
